# udp-client

./: BagsView.ui.qml  CMakeLists.txt  ConnectionDialog.ui.qml  ConnectionEditor.ui.qml  ConnectionForm.ui.qml  EditableComboBox.ui.qml  HeaderLabel.ui.qml  LaunchButton.ui.qml  LogView.ui.qml  MainForm.ui.qml  PingButton.ui.qml  SignButton.qml  SureDialog.qml  TaskDelegate.ui.qml  TaskDialog.ui.qml  TaskEditor.ui.qml  TaskListModel.qml  TasksView.ui.qml  backend.cpp  backend.h  connection.cpp  connection.h  files.cpp  files.h  interfaces.cpp  interfaces.h  main.cpp  main.qml  qml.qrc  subscriber.cpp  subscriber.h  task.cpp  task.h  udp-client.pro
include/: backend.h  connection.h  interfaces.h  scan.h  task.h
include/pcl/: pcl_config.h
qml/: ConnectionEditor.ui.qml  ConnectionForm.ui.qml  EditableComboBox.ui.qml  IfComboBox.qml  PingButton.ui.qml  ScanView.qml  SureDialog.qml  TaskDelegate.ui.qml  TaskEditor.ui.qml
src/: backend.cpp  scan.cpp
